<?xml version="1.0"?>
<package format="3">
  <author>Swapnil Kalhapure</author>
  <name>ddsm115_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver for Waveshare DDSM115 servos</description>
  <license>Apache-2.0</license>

  <maintainer email="kalhapure.swapnil@gmail.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <!-- <build_depend>ddsm115_driver</build_depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <!-- <exec_depend>ddsm115_driver</exec_depend> -->

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>yaml-cpp</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
     <pluginlib plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
